jboot v4.1.7 2024-08-18:
优化：JbootAopFactory.java 构造方法访问权限修改为 protected 方便继承扩展，感谢 @macaque
优化：cache 带有dataLoader的方法中日志会打印多次问题，感谢 @macaque
优化：findListByColumns 增加从 start 开始取 count 条方法 即 limit ?,?，感谢 @464455798@qq.com
修复：修复 brpop blpop 无法取出 key 的问题，感谢 @macaque



jboot v4.1.6 2024-06-01:
新增：根据 configName 获取 ActiveRecordPlugin 的功能，方便扩展，感谢 @caoyuan
优化：优化 SentinelUtil 工具类
优化：修正异常信息的错别字问题
优化：升级 JFinal 等相关依赖到最新版本
优化：升级并适配 Jedis 到最新版本
修复：SentinelInterceptor 捕获异常后，渲染完页面要关闭输出流，感谢 @caoyuan



jboot v4.1.5 2023-09-08:
优化：MockProxy 由 Java Proxy 替换 cblib
优化：增加 Hikari 连接池配置参数 keepaliveTime 配置功能，感谢 @赵锋
优化：设置 SentinelInterceptor 返回自定义的 json 串，感谢 @caoyuan
优化：SentinelConfig 新增 set 方法，方便用户自己通过代码注入，感谢 @caoyuan
优化：修改方法的 wrap 与 toUpperCase 方法为public ，方便重写时决定SQL是否需要加引号与大小写，感谢 @HingLo-C
优化：升级相关依赖到最新版本



jboot v4.1.3 2023-06-21:
优化：线程池同一使用 NamedThreadPools.java 进行构建
优化：修改版错别字 taked 为 took
优化：添加更多的扫描 jar 排除，减少启动消耗时间



jboot v4.1.2 2023-06-20:
修复：Oracle 数据库在某些极端情况下出错的问题



jboot v4.1.1 2023-06-19:
修复：修复 MQ 通知线程在高并发场景下无法及时回收的问题
优化：升级 JFinal 等依赖到最新版本



jboot v4.1.0 2023-05-12:
新增：自定义 JFinalFilter 的支持
优化：重命名 JbootAccessTokenCache 为 WechatAccessTokenCache
优化：JbootAppListenerManager 中重复的 foreach 操作 感谢 @梦行
优化：升级 Jfinal/jfinal-undertow/jsoup 等到最新版本



jboot v4.0.9 2023-03-08:
优化：JbootResourceLoader 忽略掉 windows 和 mac 下的临时文件
优化：修改 SqlBuilder.java 的错别字
修复：Columns.orEqs 没有添加括号导致 sql 逻辑不对的问题



jboot v4.0.8 2023-02-05:
优化：升级 ShardingJDBC 到 5.x 最新版本
优化：升级 Columns.in 和 notIn 等方法和错别字
优化：升级 jfinal-undertow、jackson、metrics 等到最新版本



jboot v4.0.7 2023-01-06:
优化：重构 AttachmentManager 使之更加灵活易用
新增：StrUtil.isStartsWithAny() 方法
新增：FileUtil.getFileMD5() 等方法
新增：CdnUtil.appendCdnDomain() 方法



jboot v4.0.6 2022-12-31:
修复：缓存注解自动生成 key 无法支持集合参数的问题
优化：ApplicationUtil.java 使其在 window 下输出正确的 classpath 路径
优化：修改 ValueFilterInterceptor.java 里的错别字
优化：JbootConfigManager.java 配置独立目录时，再次读取 jboot.properties 文件



jboot v4.0.5 2022-12-29:
新增：jboot.cache.cacheSyncMqChannel 的配置，用于对分布式缓存的 channel 进行自定义