@@ -6,7 +6,7 @@
 
     <groupId>io.jboot</groupId>
     <artifactId>jboot</artifactId>
-    <version>4.1.7</version>
+    <version>4.1.8</version>
     <packaging>jar</packaging>
 
     <name>jboot</name>
